--- a/my-app/Gemfile
+++ b/my-app/Gemfile
@@ -1,6 +1,6 @@
 source 'https://rubygems.org'
 
-
+ruby '2.2.1'
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.2.6'
 # Use sqlite3 as the database for Active Record
@@ -48,3 +48,7 @@ gem 'mongoid', '~> 5.1.0'
 gem 'carrierwave-mongoid', :require => 'carrierwave/mongoid'
 gem 'mongoid-grid_fs', github: 'ahoward/mongoid-grid_fs'
 gem 'fog', require: 'fog/aws'
+gem "heroku"
+group :production do
+  gem 'thin'
+end
