--- a/my-app/config/mongoid.yml
+++ b/my-app/config/mongoid.yml
@@ -8,23 +8,12 @@ development:
   options:    
     raise_not_found_error: false
 
-production:  
-  clients:    
-    default:      
-      database: my_app      
-      hosts:
-        - localhost:27017
-      options:        
-  options:    
-    raise_not_found_error: false
-   
-test:
-  clients:
-    default:
-      database: my_app
-      hosts:
-        - localhost:27017
-      options:
-        read:
-          mode: :primary
-        max_pool_size: 1
+<% if ENV['MONGOHQ_URL'] %>
+  production:
+    sessions:
+      default:
+        uri: <%= ENV['MONGOHQ_URL'] %>
+        options:
+          skip_version_check: true
+          safe: true
+<% end %>
