--- a/my-app/config/config.yml
+++ b/my-app/config/config.yml
@@ -1,1 +1,4 @@
- Mongoid.load!('config/mongoid.yml')
+default: &default
+  S3_KEY: AKIAJ6QC2SRYAAB546XA
+  S3_SECRET: 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
+  S3_REGION: us-west-2
