--- a/my-app/Gemfile
+++ b/my-app/Gemfile
@@ -4,7 +4,6 @@ ruby '2.2.1'
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.2.6'
 # Use sqlite3 as the database for Active Record
-gem 'sqlite3'
 # Use SCSS for stylesheets
 gem 'sass-rails', '~> 5.0'
 # Use Uglifier as compressor for JavaScript assets
@@ -40,7 +39,7 @@ end
 group :development do
   # Access an IRB console on exception pages or by using <%= console %> in views
   gem 'web-console', '~> 2.0'
-
+  gem 'sqlite3'
   # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
   gem 'spring'
 end
@@ -51,4 +50,6 @@ gem 'fog', require: 'fog/aws'
 gem "heroku"
 group :production do
   gem 'thin'
+  gem 'mongoid', '~> 5.1.0'
+  gem 'rails_12factor'
 end
